# geneax

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
src/geneax/: __init__.py  _version.py  geno.py  io.py  skeleton.py
tests/: conftest.py  test_geno.py  test_skeleton.py
