[project]
name = "geneax"
dynamic = ["version"]
description = "Efficient representation of genotype matrices"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
    { name = "Nicholas Mancuso", email = "nmancuso@usc.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "importlib-metadata; python_version<\"3.8\"",
    "jaxlib",
    "jax",
    "lineax",
]

[project.urls]
Homepage = "https://github.com/mancusolab/geneax/"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/geneax/_version.py"

[tool.hatch.build.targets.sdist]
include = ["src/"]
exclude = ["docs/"]

[tool.hatch.envs.test]
dependencies = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
run = "run-coverage --no-cov"

[tool.ruff]
line-length = 120
select = ["E", "F", "I001"]
ignore = ["E402", "E721", "E731", "E741", "F722", "F811"]
ignore-init-module-imports = true

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
lines-between-types = 1
known-local-folder = ["src"]
known-first-party = ["geneax"]
section-order = ["future", "standard-library", "third-party", "jax-ecosystem", "first-party", "local-folder"]
extra-standard-library = ["typing_extensions"]
order-by-type = false

[tool.ruff.isort.sections]
jax-ecosystem = ["equinox", "jax", "jaxtyping", "lineax"]
